add: CSS class .body_style to apply to <body> tag

--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,10 @@
 h1 {
     text-align: center;
 }
+
+.body_style {
+    padding-left: 100px;
+    paddng-right: 100px;
+    text-align: left;
+    border: 2px solid cadetblue;
+}
