--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Brandon's First Flask App</title>
-    <!-- this Flask jinja2 links our index page to styling sheet. -->
+    <!-- this Flask jinja2 in {{ }} links our index page to styling sheet. -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     <!-- link to pure.css stylesheets instead of our local ones -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@2.1.0/build/pure-min.css" integrity="sha384-yHIFVG6ClnONEA5yB5DJXfW2/KC173DIQrYoZMEtBvGzmf0PKiGyNEqe9N6BNDBH" crossorigin="anonymous">
@@ -13,9 +13,23 @@
 
 <body class="body_style">
 
-    <p>Brandon was here!</p>
+<div> <!-- this is a like a 'body within a body' section -->
+    <p>Please enter your name</p>
 
-    <a class="pure-button" href="#">A Pure Button</a>
-    <button class="pure-button">A Pure Button</button>
+    <!-- using a Pure.css form! linked above -->
+    <form class="pure-form" method="POST" action="/"> <!-- action= where to take you -->
+    Name: <br>
+        <input type="text" name="username"><br> <!-- name arg is a tag field. IMPORTANT for referencing elsewhere! -->
+        <button type="submit" class="pure-button pure-button-primary" value="submit">Submit</button>
+    </form>
+</div>
+
+<br>
+
+<div>
+    {% if name %} <!-- only True if someone passed and hit submit button, creating the `posted_name` variable in app.py -->
+        <p> Welcome to my site, {{ name }}! </p> <!-- param substitution from app.py happens in jinja2 template here -->
+    {% endif %}
+</div>
 
 </body>
