bugfix: move return up one indent in app.py. submit -> Submit in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,8 @@
     <!-- using a Pure.css form! linked above -->
     <form class="pure-form" method="POST" action="/"> <!-- action= where to take you -->
     Name: <br>
-        <input type="text" name="username"><br> <!-- name arg is a tag field. IMPORTANT for referencing elsewhere! -->
-        <button type="submit" class="pure-button pure-button-primary" value="submit">Submit</button>
+    <input type="text" name="username"><br> <!-- name arg is a tag field. IMPORTANT for referencing elsewhere! -->
+    <button type="submit" class="pure-button pure-button-primary" value="Submit">Submit</button>
     </form>
 </div>
 
