--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Brandon's First Flask App</title>
-    <!-- this Flask jinja2 in {{ }} links our index page to styling sheet. -->
+    <!-- this Flask jinja2 in double brackets links our index page to styling sheet. -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     <!-- link to pure.css stylesheets instead of our local ones -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@2.1.0/build/pure-min.css" integrity="sha384-yHIFVG6ClnONEA5yB5DJXfW2/KC173DIQrYoZMEtBvGzmf0PKiGyNEqe9N6BNDBH" crossorigin="anonymous">
