--- a/templates/index.html
+++ b/templates/index.html
@@ -27,8 +27,8 @@
 <br>
 
 <div>
-    {% if name %} <!-- only True if someone passed and hit submit button, creating the `posted_name` variable in app.py -->
-        <p> Welcome to my site, {{ name }}! </p> <!-- param substitution from app.py happens in jinja2 template here -->
+    {% if name_entered %} <!-- only True if someone passed and hit submit button, creating the `posted_name` variable in app.py -->
+        <p> Welcome to my site, {{ name_entered }}! </p> <!-- param substitution from app.py happens in jinja2 template here -->
     {% endif %}
 </div>
 
